# jira2mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: releasing.md
scripts/: bump_version.py
skills/jira2cli/: SKILL.md
skills/jira2cli/references/: attachment-download.md  comment-on-issue.md  create-issue.md  edit-issue.md  field-metadata.md  install-auth.md  jql-syntax.md  link-issues.md  project-discovery.md  search-and-read-issues.md  transitions-and-filters.md  user-identity-lookup.md  worklog-management.md  worklog-report.md
src/jira2mcp/: __init__.py
tests/: test_adf.py  test_attachment_operations.py  test_compat_shims.py  test_formatters.py  test_jira2cli_commands.py  test_jira2cli_output.py  test_jira2cli_parsing.py  test_jira2cli_stage9.py  test_jql_syntax_shared.py  test_mcp_adapter.py  test_mcp_entrypoint.py  test_mcp_server_registration.py  test_publish_workflow.py  test_read_metadata_operations.py  test_read_tool.py  test_release_helpers.py  test_utils.py  test_worklog_tool.py  test_write_operations.py  test_write_validation.py
tests/e2e/jira2mcp_e2e/: README.md  __init__.py  conftest.py  scenarios.py  test_live_inmemory.py  test_live_stdio.py  test_live_write.py
