[project]
name = "jira2ai-workspace"
version = "0.0.0"
requires-python = ">=3.13"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/jira2cli", "packages/jira2mcp"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "mcp_live: hits live Jira or launches the live MCP server",
    "mcp_write: performs write operations against live Jira; requires JIRA_E2E_ALLOW_WRITE=1",
    "mcp_stdio: launches jira2mcp over stdio instead of using the in-memory FastMCP client",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
